--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "csv": "^6.3.6",
     "glob": "^10.3.10",
     "handlebars": "^4.7.8",
-    "papaparse": "^5.4.1"
+    "papaparse": "^5.4.1",
+    "unzipper": "^0.10.14"
   }
 }
