--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -2,7 +2,7 @@ name: Sync FTP to Local and Commit
 
 on:
   schedule:
-    - cron: "1/5 0 * * *" # Runs the action every day at midnight (UTC)
+    - cron: "*/5 0 * * *" # Runs the action every day at midnight (UTC)
   workflow_dispatch:
 permissions:
   contents: write
@@ -25,7 +25,15 @@ jobs:
         env:
           FTP_USER: ${{ secrets.FTP_USER }}
           FTP_PASSWORD: ${{ secrets.FTP_PASSWORD }}
+
+      - name: Check for changes
+        id: check_changes
+        run: |
+          git diff --quiet || echo "Changes detected"
+          echo "::set-output name=has_changes::$(if [ $? -eq 0 ]; then echo 'false'; else echo 'true'; fi)"
+  
       - name: Commit changes
+        if: steps.check_changes.outputs.has_changes == 'true'
         run: |
           git config --global user.name "FTP Sync"
           git config --global user.email "ftp@hbcc.com"
