--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -29,6 +29,7 @@ jobs:
       - name: Check for changes
         id: check_changes
         run: |
+          git status
           git diff --quiet || echo "Changes detected"
           echo "::set-output name=has_changes::$(if [ $? -eq 0 ]; then echo 'false'; else echo 'true'; fi)"
 
