--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -5,7 +5,9 @@ on:
     - cron: "*/5 * * * *" # Runs the action every day at midnight (UTC)
   workflow_dispatch:
 permissions:
-  contents: write
+  contents: read
+  pages: write
+  id-token: write
 jobs:
   sync-ftp:
     runs-on: ubuntu-latest
@@ -37,7 +39,7 @@ jobs:
             git add .
             git commit -am "Sync FTP changes"
             git push
-            echo "CHANGED=true" >> "$GITHUB_ENV"
+            echo "CHANGED=true" >> "$GITHUB_OUTPUT"
 
           else
             echo "There are no changes to commit."
@@ -46,15 +48,15 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup Pages
-        # if: steps.commit.outputs.CHANGED == 'true'
+        if: steps.commit.outputs.CHANGED == 'true'
         uses: actions/configure-pages@v4
       - name: Upload artifact
-        # if: steps.commit.outputs.CHANGED == 'true'
+        if: steps.commit.outputs.CHANGED == 'true'
         uses: actions/upload-pages-artifact@v3
         with:
           # Upload entire repository
           path: "./www"
       - name: Deploy to GitHub Pages
-        # if: steps.commit.outputs.CHANGED == 'true'
+        if: steps.commit.outputs.CHANGED == 'true'
         id: deployment
         uses: actions/deploy-pages@v4
