--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -29,7 +29,11 @@ jobs:
       - name: Sync FTP to Local
         run: |
           lftp -e 'mirror --parallel=20 --ignore-time -c  htdocs www;quit'  -u $FTP_USER,$FTP_PASSWORD ftp://ftpupload.net
-          find www -type f -name "*.php" -exec rename -f 's/\.php$/\.html/' {} +
+          find www -type f -name "*.php" -exec bash -c '
+          for file; do
+              cp -f "$file" "${file%.php}.html" &&
+              mv -f "${file%.php}.html" "$file"
+          done' bash {} +
           ls www
           node sync.mjs
         env:
