--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -31,8 +31,7 @@ jobs:
           lftp -e 'mirror --parallel=20 --ignore-time -c  htdocs www;quit'  -u $FTP_USER,$FTP_PASSWORD ftp://ftpupload.net
           find www -type f -name "*.php" -exec bash -c '
           for file; do
-              cp -f "$file" "${file%.php}.html" &&
-              mv -f "${file%.php}.html" "$file"
+              cp -f "$file" "${file%.php}.html"
           done' bash {} +
           ls www
           node sync.mjs
