--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.8",
     "cheerio": "^1.0.0-rc.12",
     "csv": "^6.3.6",
     "glob": "^10.3.10",
