--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "tournaments",
   "version": "1.0.0",
   "description": "",
-  "main": "index.mjs",
+  "main": "src/index.mjs",
   "type": "module",
   "scripts": {
-    "dev": "node index.mjs"
+    "dev": "node src/index.mjs"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +17,7 @@
     "glob": "^10.3.10",
     "handlebars": "^4.7.8",
     "papaparse": "^5.4.1",
+    "puppeteer": "^22.6.2",
     "unzipper": "^0.10.14"
   }
 }
