--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -34,7 +34,7 @@ jobs:
               cp -f "$file" "${file%.php}.html"
           done' bash {} +
           ls www
-          # node src/update-html.mjs
+          node src/update-html.mjs
           node src/sync.mjs
         env:
           FTP_USER: ${{ secrets.FTP_USER }}
