--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -28,11 +28,14 @@ jobs:
 
       - name: Sync FTP to Local
         run: |
-          lftp -e 'mirror --parallel=20 --ignore-time -c  htdocs www;quit'  -u $FTP_USER,$FTP_PASSWORD ftp://ftpupload.net
+
+          node src/bytehost.mjs
+          lftp -e 'mirror --parallel=20 --ignore-time -c  htdocs www;quit'  -u $FTP_USER,$FTP_PASSWORD ftp://ftpupload.net || true
           find www -type f -name "*.php" -exec bash -c '
           for file; do
               cp -f "$file" "${file%.php}.html"
           done' bash {} +
+          docker-compose up -d
           ls www
           node src/update-html.mjs
           node src/sync.mjs
