--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -35,15 +35,16 @@ jobs:
         run: |
           node src/bytehost.mjs
           
-      - name: "Test"
+      - name: "Fetch content from ftp server"
         uses: "samuraitruong/use-ftp-action@main"
         with: 
-          FTP_USERNAME: ${{ secrets.FTP_USER }}
+          FTP_USER: ${{ secrets.FTP_USER }}
           FTP_PASSWORD: ${{ secrets.FTP_PASSWORD }}
           FTP_ROOT_FOLDER: htdocs
           LOCAL_FOLDER: 'www'
           FTP_HOST: ftp://ftpupload.net
           
+
       - name: Sync FTP to Local
         run: |
           lftp -e 'mirror --parallel=20 --ignore-time -c  htdocs www;quit'  -u $FTP_USER,$FTP_PASSWORD ftp://ftpupload.net
