--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -61,16 +61,16 @@ jobs:
           ls www
           node src/update-html.mjs
           node src/sync.mjs
-      # - name: Replace PHP links with HTML links
-      #   run: |
-      #     DIRECTORY="./www"
+      - name: Replace PHP links with HTML links
+        run: |
+          DIRECTORY="./www"
 
-      #     find "$DIRECTORY" -type f -name "*.html" -print0 | while IFS= read -r -d '' file; do
-      #       sed -i 's/\.php/.html/g' "$file"
-      #     done
-      #     find "$DIRECTORY" -type f -name "*.js" -print0 | while IFS= read -r -d '' file; do
-      #       sed -i 's/\.php/.html/g' "$file"
-      #     done
+          find "$DIRECTORY" -type f -name "*.html" -print0 | while IFS= read -r -d '' file; do
+            sed -i 's/\.php/.html/g' "$file"
+          done
+          find "$DIRECTORY" -type f -name "*.js" -print0 | while IFS= read -r -d '' file; do
+            sed -i 's/\.php/.html/g' "$file"
+          done
       - name: Commit changes
         id: commit
         run: |
