--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -27,34 +27,36 @@ jobs:
             
       - name: Install dependencies
         run: |
+          sudo apt update
+          sudo apt install lftp rename
           npm install
       
       - name: Keep site alive
         run: |
           node src/bytehost.mjs
           
-      - name: "Fetch content from ftp server"
-        uses: "samuraitruong/use-ftp-action@main"
-        with: 
-          FTP_USER: ${{ secrets.FTP_USER }}
-          FTP_PASSWORD: ${{ secrets.FTP_PASSWORD }}
-          FTP_ROOT_FOLDER: htdocs
-          LOCAL_FOLDER: 'www'
-          FTP_HOST: ftp://ftpupload.net
-          SYNC_MODE: download
-          
-
-      # - name: Sync FTP to Local
-      #   run: |
-      #     lftp -e 'mirror --parallel=20 --ignore-time -c  htdocs www;quit'  -u $FTP_USER,$FTP_PASSWORD ftp://ftpupload.net
-      #     find www -type f -name "*.php" -exec bash -c '
-      #     for file; do
-      #         cp -f "$file" "${file%.php}.html"
-      #     done' bash {} +
-          
-      #   env:
+      # - name: "Fetch content from ftp server"
+      #   uses: "samuraitruong/use-ftp-action@main"
+      #   with: 
       #     FTP_USER: ${{ secrets.FTP_USER }}
       #     FTP_PASSWORD: ${{ secrets.FTP_PASSWORD }}
+      #     FTP_ROOT_FOLDER: htdocs
+      #     LOCAL_FOLDER: 'www'
+      #     FTP_HOST: ftp://ftpupload.net
+      #     SYNC_MODE: download
+          
+
+      - name: Sync FTP to Local
+        run: |
+          lftp -e 'mirror --parallel=20 --ignore-time -c  htdocs www;quit'  -u $FTP_USER,$FTP_PASSWORD ftp://ftpupload.net
+          find www -type f -name "*.php" -exec bash -c '
+          for file; do
+              cp -f "$file" "${file%.php}.html"
+          done' bash {} +
+          
+        env:
+          FTP_USER: ${{ secrets.FTP_USER }}
+          FTP_PASSWORD: ${{ secrets.FTP_PASSWORD }}
       - name: Update HTML content
         run: |
           docker-compose up -d
