--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -46,22 +46,22 @@ jobs:
       #     SYNC_MODE: download
           
 
-      - name: Sync FTP to Local
-        run: |
-          lftp -e 'mirror --parallel=20 --ignore-time -c  htdocs www;quit'  -u $FTP_USER,$FTP_PASSWORD ftp://ftpupload.net
-          find www -type f -name "*.php" -exec bash -c '
-          for file; do
-              cp -f "$file" "${file%.php}.html"
-          done' bash {} +
+      # - name: Sync FTP to Local
+      #   run: |
+      #     lftp -e 'mirror --parallel=20 --ignore-time -c  htdocs www;quit'  -u $FTP_USER,$FTP_PASSWORD ftp://ftpupload.net
+      #     find www -type f -name "*.php" -exec bash -c '
+      #     for file; do
+      #         cp -f "$file" "${file%.php}.html"
+      #     done' bash {} +
           
-        env:
-          FTP_USER: ${{ secrets.FTP_USER }}
-          FTP_PASSWORD: ${{ secrets.FTP_PASSWORD }}
+      #   env:
+      #     FTP_USER: ${{ secrets.FTP_USER }}
+      #     FTP_PASSWORD: ${{ secrets.FTP_PASSWORD }}
       - name: Update HTML content
         run: |
           docker-compose up -d
-          ls www
           node src/update-html.mjs
+          sudo chown -R runner:runner ./www
           node src/sync.mjs
       - name: Replace PHP links with HTML links
         run: |
