--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -32,7 +32,7 @@ jobs:
           npm install
       - name: Descrypt vault files
         run: |
-          node src/vault.mjs descrypt
+          node src/vault.mjs decrypt
         env:
           VAULT_SECRET: ${{secrets.VAULT_SECRET}}
       - name: Keep site alive
